--- a/admin/src/app/components/productos/edit-producto/edit-producto.component.html
+++ b/admin/src/app/components/productos/edit-producto/edit-producto.component.html
@@ -38,7 +38,7 @@
                         </div>
                           <div class="col-lg-4 form-group">	
                               <label for="">Stock</label>
-                              <input type="number" class="form-control" placeholder="Cantidad inicial" required name="stock" [(ngModel)]="producto.stock">
+                              <input disabled type="number" class="form-control" placeholder="Cantidad inicial" required name="stock" [(ngModel)]="producto.stock">
                           </div>
                           <div class="col-lg-4 form-group">	
                               <label for="">Precio</label>
