--- a/admin/src/app/components/productos/index-producto/index-producto.component.html
+++ b/admin/src/app/components/productos/index-producto/index-producto.component.html
@@ -60,7 +60,7 @@
                         <td>{{indice + 1}}</td>
                         <td>
                           <h6 style="padding-bottom: 0; margin-bottom: 0;">
-                            <img style="width: 50px;" [src]="url+'obtener_portada/'+item.portada" class="img-thumbnail" alt="Rounded image">
+                            <img style="width: 50px; height: 50px;" [src]="url+'obtener_portada/'+item.portada" class="img-thumbnail" alt="Rounded image">
                             {{item.titulo}}
                           </h6>
                         </td>
