Se soluciono el error que no desmarcaba el botón, ahora lo hace correctamente y pide que se seleccione en caso de no hacerlo.

--- a/admin/src/app/components/productos/inventario-producto/inventario-producto.component.html
+++ b/admin/src/app/components/productos/inventario-producto/inventario-producto.component.html
@@ -109,10 +109,10 @@
                 <div class="form-group">
                   <label for="">Tipo movimiento</label>
                   <div class="btn-group " data-toggle="buttons">
-                    <label class="btn btn-success btn-sm">
-                      <input type="radio" name="tipo" id="ingreso" value="true" name="tipo" [(ngModel)]="inventario.tipo" checked> Ingreso
+                    <label class="btn btn-outline-success btn-sm btns">
+                      <input type="radio" name="tipo" id="ingreso" value="true" name="tipo" [(ngModel)]="inventario.tipo"> Ingreso
                     </label>
-                    <label class="btn btn-danger btn-sm">
+                    <label class="btn btn-outline-danger btn-sm btns">
                       <input type="radio" name="tipo" id="egreso" value="false" name="tipo" [(ngModel)]="inventario.tipo"> Egreso
                     </label>
                   </div>
