Termine el video de listar, voy a ir paso a paso

--- a/admin/src/app/components/clientes/index-cliente/index-cliente.component.html
+++ b/admin/src/app/components/clientes/index-cliente/index-cliente.component.html
@@ -18,16 +18,16 @@
         <div class="card-header">
             <form class="form-inline pt-2">
                 <label class="sr-only" for="inline-form-input-name">Nombre</label>
-                  <input class="form-control mb-3 mr-sm-4" (keyup) = "filtro('nombre')" name="filtro_nombre" [(ngModel)] = "filtro_nombre" type="text" id="inline-form-input-name" placeholder="Nombre">
-                  <label class="sr-only" for="inline-form-input-name">Apellido</label>
-                  <input class="form-control mb-3 mr-sm-4" (keyup) = "filtro('apellido')" name="filtro_apellido" [(ngModel)] = "filtro_apellido" type="text" id="inline-form-input-name" placeholder="Apellido">
+                <input class="form-control mb-3 mr-sm-4" (keyup) = "filtro('nombre')" name="filtro_nombre" [(ngModel)] = "filtro_nombre" type="text" id="inline-form-input-name" placeholder="Nombre">
+                <!--<label class="sr-only" for="inline-form-input-name">Apellido</label>
+                <input class="form-control mb-3 mr-sm-4" (keyup) = "filtro('apellido')" name="filtro_apellido" [(ngModel)] = "filtro_apellido" type="text" id="inline-form-input-name" placeholder="Apellido">
                 <label class="sr-only" for="inline-form-input-username">Correo</label>
                 <div class="input-group mb-3 mr-sm-4">
                 <div class="input-group-prepend">
                     <div class="input-group-text">@</div>
                 </div>
                   <input class="form-control" type="text" (keyup) = "filtro('correo')" name="filtro_correo" [(ngModel)] = "filtro_correo" placeholder="Correo">
-                </div>
+                </div>-->
             </form>
         </div>
         <div class="card-body">
