--- a/admin/src/app/components/clientes/index-cliente/index-cliente.component.html
+++ b/admin/src/app/components/clientes/index-cliente/index-cliente.component.html
@@ -104,7 +104,7 @@
               </ng-container>
             </div>
         </div>
-        <div class="card-footer">
+        <div class="card-footer" *ngIf="has_data">
             <ngb-pagination
               [(page)]="page"
               [pageSize] = "pageSize"
