Modificación popup eliminar

--- a/admin/src/app/components/productos/index-producto/index-producto.component.html
+++ b/admin/src/app/components/productos/index-producto/index-producto.component.html
@@ -90,7 +90,7 @@
                             <div class="modal-dialog modal-dialog-centered" role="document">
                               <div class="modal-content">
                                 <div class="modal-header">
-                                  <h4 class="modal-title">Confirmación de eliminación</h4>
+                                  <h4 class="modal-title">Confirmar eliminación</h4>
                                   <button class="close" type="button" data-dismiss="modal" aria-label="Close">x</button>
                                 </div>
                                 <div class="modal-body">
