--- a/admin/src/app/components/cupones/index-cupon/index-cupon.component.html
+++ b/admin/src/app/components/cupones/index-cupon/index-cupon.component.html
@@ -109,11 +109,11 @@
                             <div class="modal-dialog modal-dialog-centered" role="document">
                               <div class="modal-content">
                                 <div class="modal-header">
-                                  <h4 class="modal-title">Confirmación de eliminación</h4>
+                                  <h4 class="modal-title">Confirmar eliminación</h4>
                                   <button class="close" type="button" data-dismiss="modal" aria-label="Close">x</button>
                                 </div>
                                 <div class="modal-body">
-                                  <p class="fs-sm">Desea eliminar el producto <b>[{{item.codigo}}] - {{item.titulo}}</b>?</p>
+                                  <p class="fs-sm">Desea eliminar el cupón <b>{{item.codigo}}</b>?</p>
                                 </div>
                                 <div class="modal-footer">
                                   <button class="btn btn-secondary btn-sm" type="button" data-dismiss="modal">Cancelar</button>
