--- a/admin/src/app/components/productos/create-producto/create-producto.component.html
+++ b/admin/src/app/components/productos/create-producto/create-producto.component.html
@@ -13,29 +13,27 @@
               <div class="row">
                 <div class="col-lg-8">
                     <div class="row">
-                      <div class="col-lg-8 form-group">	
+                      <div class="col-lg-8 form-group">
                           <label for="">Producto</label>
                           <input type="text" class="form-control" placeholder="Titulo de producto" required name="titulo" [(ngModel)]="producto.titulo">
                       </div>
-                      <div class="col-lg-4 form-group">	
+                      <div class="col-lg-4 form-group">
                         <label for="">Código</label>
                         <input type="text" class="form-control" placeholder="Código de producto" required name="codigo" [(ngModel)]="producto.codigo">
                     </div>
-                      <div class="col-lg-4 form-group">	
+                      <div class="col-lg-4 form-group">
                           <label for="">Stock</label>
                           <input type="number" class="form-control" placeholder="Cantidad inicial" min="1" required name="stock" [(ngModel)]="producto.stock">
                       </div>
-                      <div class="col-lg-4 form-group">	
+                      <div class="col-lg-4 form-group">
                           <label for="">Precio</label>
                           <input type="number" class="form-control" placeholder="Precio" min="1" required name="precio" [(ngModel)]="producto.precio">
                       </div>
-                      <div class="col-lg-4 form-group">	
+                      <div class="col-lg-4 form-group">
                           <label for="">Categoría</label>
                           <select class="form-control custom-select" id="select-input" required name="categoria" [(ngModel)]="producto.categoria">
                             <option value="" selected disabled>Seleccionar</option>
-                            <option value="Categoria 1">Categoria 1</option>
-                            <option value="Categoria 2">Categoria 2</option>
-                            <option value="Categoria 3">Categoria 3</option>
+                            <option value="{{item.titulo}}" *ngFor="let item of config.categorias">{{item.titulo}}</option>
                           </select>
                       </div>
 
@@ -53,7 +51,7 @@
                 </div>
                 <div class="col-lg-4">
                   <div class="row">
-                    <div class="col-lg-12 form-group">	
+                    <div class="col-lg-12 form-group">
                         <label for="">Portada</label>
                         <div class="custom-file">
                           <input class="custom-file-input" type="file" id="file-input" (change)="fileChangeEvent($event)">
@@ -75,6 +73,6 @@
           </button>
           <a [routerLink]="['/panel/productos']"  class="btn btn-warning">Regresar</a>
       </div>
-  </div>    
+  </div>
 
   </form>
