--- a/admin/src/app/components/sidebar/sidebar.component.html
+++ b/admin/src/app/components/sidebar/sidebar.component.html
@@ -13,9 +13,9 @@
           Cuenta
         </a>
       </li>
- 
+
     </ul>
-  
+
   </header>
 
   <aside class="cs-offcanvas cs-offcanvas-expand bg-dark" id="componentsNav">
@@ -43,6 +43,7 @@
       <hr class="hr-gradient hr-light mb-2 opacity-25">
       <nav class="nav nav-light">
         <a class="nav-link px-4" [routerLink] = "['/inicio']" routerLinkActive= "active" >Inicio</a>
+        <a class="nav-link px-4" [routerLink]="['/panel/configuraciones']" routerLinkActive="active" >Configuraciones</a>
         <a class="nav-link px-4" [routerLink]="['/panel/clientes']" routerLinkActive="active" >Clientes</a>
         <a class="nav-link px-4" [routerLink]="['/panel/productos']" routerLinkActive="active" >Productos</a>
         <a class="nav-link px-4" [routerLink]="['/panel/cupones']" routerLinkActive="active" >Cupones</a>
