--- a/admin/src/app/components/productos/index-producto/index-producto.component.html
+++ b/admin/src/app/components/productos/index-producto/index-producto.component.html
@@ -18,11 +18,11 @@
         <div class="card-header">
             <form #filtroForm = "ngForm" (ngSubmit)="filtrar()">
               <div class="row">
-                <div class="col-lg-3 form-group">	
+                <div class="col-lg-3 form-group">
                   <label class="sr-only" for="inline-form-input-name">Título</label>
                   <input class="form-control" id="filtro_titulo" name="filtro_titulo" [(ngModel)] = "filtro.titulo" type="text" placeholder="Título">
                 </div>
-                <div class="col-lg-3 form-group">	
+                <div class="col-lg-3 form-group">
                   <label class="sr-only" for="inline-form-input-name">Código</label>
                   <input class="form-control" id="filtro_codigo" name="filtro_codigo" [(ngModel)] = "filtro.codigo" type="text" placeholder="Código">
                 </div>
@@ -80,12 +80,15 @@
                             <i class="fa fa-pencil mt-n1 align-middle"></i>
                           </a>
                           <a type="button" class="btn btn-sm btn-outline-info rounded-pill btn-icon mr-2" [routerLink]="['/panel/productos/inventario',item._id]" >
-                            <i class="fa fa-th-list mt-n1 align-middle"></i>
+                            <i class="fa fa-th-list mt-n1 align-middle" title="Inventario"></i>
+                          </a>
+                          <a type="button" class="btn btn-sm btn-outline-info rounded-pill btn-icon mr-2" [routerLink]="['/panel/productos/variedades',item._id]" >
+                            <i class="fa fa-list-ol mt-n1 align-middle" title="Variedades"></i>
                           </a>
                           <button style="cursor: pointer;" data-toggle="modal" [attr.data-target]="'#delete-'+item._id" type="button" class="btn btn-sm btn-outline-danger rounded-pill btn-icon">
                             <i class="fa fa-trash mt-n1 align-middle"></i>
                           </button>
-  
+
                           <div class="modal fade" id="delete-{{item._id}}" tabindex="-1" style="display: none;" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
                               <div class="modal-content">
@@ -103,7 +106,7 @@
                               </div>
                             </div>
                           </div>
-                          
+
                         </td>
                       </tr>
                     </tbody>
@@ -121,4 +124,4 @@
               [collectionSize]="productos.length"
             ></ngb-pagination>
         </div>
-  </div>  
+  </div>
