--- a/admin/src/app/components/clientes/index-cliente/index-cliente.component.html
+++ b/admin/src/app/components/clientes/index-cliente/index-cliente.component.html
@@ -18,15 +18,15 @@
         <div class="card-header">
           <form #filtroForm = "ngForm" (ngSubmit)="filtrar()">
             <div class="row">
-              <div class="col-lg-3 form-group">	
+              <div class="col-lg-3 form-group">
                 <label class="sr-only" for="inline-form-input-name">Nombre</label>
                 <input class="form-control" id="filtro_nombre" name="filtro_nombre" [(ngModel)] = "filtro.nombre" type="text" placeholder="Nombre">
               </div>
-              <div class="col-lg-3 form-group">	
+              <div class="col-lg-3 form-group">
                 <label class="sr-only" for="inline-form-input-name">Apellido</label>
                 <input class="form-control" id="filtro_apellido" name="filtro_apellido" [(ngModel)] = "filtro.apellido" type="text" placeholder="Apellido">
               </div>
-              <div class="col-lg-3 input-group form-group">	
+              <div class="col-lg-3 input-group form-group">
                 <label class="sr-only" for="inline-form-input-name">Correo</label>
                 <div class="input-group-prepend">
                   <div class="input-group-text">@</div>
@@ -69,13 +69,15 @@
                         <td>{{item.nombres}} {{item.apellidos}}</td>
                         <td>{{item.email}}</td>
                         <td>
-                          <a type="button" class="btn btn-sm btn-outline-info rounded-pill btn-icon mr-2" [routerLink]="['/panel/clientes',item._id]" >
+                          <a type="button" class="btn btn-sm btn-outline-info rounded-pill btn-icon mr-2" data-tooltip="Editar"
+                          data-tooltip-location="top" [routerLink]="['/panel/clientes',item._id]" >
                             <i class="fa fa-pencil mt-n1 align-middle"></i>
                           </a>
-                          <button style="cursor: pointer;" data-toggle="modal" [attr.data-target]="'#delete-'+item._id" type="button" class="btn btn-sm btn-outline-danger rounded-pill btn-icon">
+                          <button style="cursor: pointer;" data-toggle="modal" data-tooltip="Eliminar"
+                          data-tooltip-location="top" [attr.data-target]="'#delete-'+item._id" type="button" class="btn btn-sm btn-outline-danger rounded-pill btn-icon">
                             <i class="fa fa-trash mt-n1 align-middle"></i>
                           </button>
-  
+
                           <div class="modal fade" id="delete-{{item._id}}" tabindex="-1" style="display: none;" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
                               <div class="modal-content">
@@ -93,7 +95,7 @@
                               </div>
                             </div>
                           </div>
-                          
+
                         </td>
                       </tr>
                     </tbody>
@@ -111,4 +113,4 @@
               [collectionSize]="clientes.length"
             ></ngb-pagination>
         </div>
-  </div>  
+  </div>
