--- a/admin/src/app/components/productos/index-producto/index-producto.component.html
+++ b/admin/src/app/components/productos/index-producto/index-producto.component.html
@@ -71,21 +71,32 @@
                           </h6>
                         </td>
                         <td>{{item.codigo}}</td>
-                        <td>{{item.stock}}</td>
+                        <td>
+                          <div *ngIf="item.stock <= item.alerta_stock" class="badge badge-warning" style="color:black;">
+                            {{item.stock}}
+                          </div>
+                          <div *ngIf="item.stock > item.alerta_stock" class="badge badge-success" style="color:black;">
+                            {{item.stock}}
+                          </div>
+                        </td>
                         <td>${{item.precio}}</td>
                         <td>{{item.categoria}}</td>
                         <td>{{item.nventas}}</td>
                         <td>
-                          <a type="button" class="btn btn-sm btn-outline-info rounded-pill btn-icon mr-2" [routerLink]="['/panel/productos',item._id]" >
+                          <a type="button" class="btn btn-sm btn-outline-info rounded-pill btn-icon mr-2" data-tooltip="Editar"
+                          data-tooltip-location="top" [routerLink]="['/panel/productos',item._id]" >
                             <i class="fa fa-pencil mt-n1 align-middle"></i>
                           </a>
-                          <a type="button" class="btn btn-sm btn-outline-info rounded-pill btn-icon mr-2" [routerLink]="['/panel/productos/inventario',item._id]" >
+                          <a type="button" class="btn btn-sm btn-outline-info rounded-pill btn-icon mr-2" data-tooltip="Inventario"
+                          data-tooltip-location="top" [routerLink]="['/panel/productos/inventario',item._id]" >
                             <i class="fa fa-th-list mt-n1 align-middle" title="Inventario"></i>
                           </a>
-                          <a type="button" class="btn btn-sm btn-outline-info rounded-pill btn-icon mr-2" [routerLink]="['/panel/productos/variedades',item._id]" >
+                          <a type="button" class="btn btn-sm btn-outline-info rounded-pill btn-icon mr-2" data-tooltip="Variedades"
+                          data-tooltip-location="top" data-toggle="modal" (click)="abirPopup(item._id)" >
                             <i class="fa fa-list-ol mt-n1 align-middle" title="Variedades"></i>
                           </a>
-                          <button style="cursor: pointer;" data-toggle="modal" [attr.data-target]="'#delete-'+item._id" type="button" class="btn btn-sm btn-outline-danger rounded-pill btn-icon">
+                          <button style="cursor: pointer;" data-toggle="modal" [attr.data-target]="'#delete-'+item._id" data-tooltip="Eliminar"
+                          data-tooltip-location="top" type="button" class="btn btn-sm btn-outline-danger rounded-pill btn-icon">
                             <i class="fa fa-trash mt-n1 align-middle"></i>
                           </button>
 
@@ -124,4 +135,94 @@
               [collectionSize]="productos.length"
             ></ngb-pagination>
         </div>
+  </div>
+  <div class="modal fade" id="modalVariedad" tabindex="-1" style="display: none;" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <img style="width: 50px; height: 50px; margin-right: 25px;" [src]="url+'obtener_portada/'+producto.portada" class="img-thumbnail" alt="Rounded image">
+          <h4 class="modal-title">{{producto.titulo}}</h4>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">x</button>
+        </div>
+          <div class="modal-body">
+            <div style="max-width: 100rem;">
+              <div class="row" >
+                <div class="col-md-12">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="form-group row align-items-center">
+                        <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Titulo de la variedad</label>
+                        <div class="col-md-9">
+                          <input class="form-control" type="text" id="text-input" placeholder="Título" name="titulo_variedad"
+                            [(ngModel)]="producto.titulo_variedad">
+                        </div>
+                      </div>
+                      <div class="form-group row align-items-center">
+                        <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Variedades</label>
+                        <div class="col-md-9">
+                          <div class="input-group">
+                            <input class="form-control" type="text" placeholder="Nueva variedad" id="nueva_variedad"
+                              name="nueva_varidad" [(ngModel)]="nueva_varidad" />
+                            <div class="input-group-append">
+                              <button class="btn btn-outline-primary" type="button" (click)="agregar_variedad()">Agregar</button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-3">
+                        </div>
+                        <div class="col-md-9">
+                          <div class="table-responsive mt-3">
+                            <table class="table table-sm" *ngIf="producto.variedades">
+                              <thead class="thead-dark">
+                                <tr>
+
+                                  <th>Título</th>
+                                  <th></th>
+
+                                </tr>
+                              </thead>
+                              <ng-container *ngIf="producto.variedades.length == 0">
+                                <tbody>
+                                  <tr>
+                                    <td class="text-center" colspan="2">
+                                      <span class="text-muted">No hay variedades disponibles</span>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </ng-container>
+                              <ng-container *ngIf="producto.variedades.length > 0">
+                                <tbody *ngFor="let item of producto.variedades; let indice = index">
+                                  <tr>
+                                    <td>{{item.titulo}}</td>
+                                    <td>
+                                      <a class="text-danger" style="cursor:pointer" (click)="eliminar_variedad(indice)"><i
+                                          class="fa fa-times" aria-hidden="true"></i></a>
+                                    </td>
+                                  </tr>
+                                </tbody>
+                              </ng-container>
+                            </table>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+                <!--<div class="col-md-3">
+                  <img [src]="url+'obtener_portada/'+producto.portada" class="img-thumbnail rounded-0" alt="Square image">
+                </div>
+              </div>-->
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button *ngIf="!load_btn" class="btn btn-primary mr-3" type="button" (click)="actualizar_variedad()">Guardar cambios</button>
+            <button *ngIf="load_btn" type="button" class="btn btn-secondary" disabled>
+              <span class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></span>
+              Actualizando...
+            </button>
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cerrar</button>
+          </div>
+      </div>
+    </div>
   </div>
