--- a/admin/src/app/components/productos/inventario-producto/inventario-producto.component.html
+++ b/admin/src/app/components/productos/inventario-producto/inventario-producto.component.html
@@ -23,10 +23,20 @@
 
   <div class="card box-shadow-sm" *ngIf="producto">
         <div class="card-header">
-            <h5 style="margin-bottom: 0px;"> <i class="fa fa-th-list mt-n1 align-middle"></i> Inventario de <u>{{producto.titulo}}</u></h5>
+          <div class="row">
+            <div class="col-md-6">
+              <h5 style="margin-bottom: 0px;"> <i class="fa fa-th-list mt-n1 align-middle"></i> Inventario de <u>{{producto.titulo}}</u> </h5>
+            </div>
+            <div class="col-md-6" *ngIf="producto.stock > producto.alerta_stock">
+              <h5 style="margin-bottom: 0px;"> Stock: <div class="badge bg-success" style="color:black;"> {{producto.stock}}</div> </h5>
+            </div>
+            <div class="col-md-6" *ngIf="producto.stock <= producto.alerta_stock">
+              <h5 style="margin-bottom: 0px;"> Stock: <div class="badge badge-warning" style="color:black;"> {{producto.stock}}</div> </h5>
+            </div>
+          </div>
         </div>
         <div class="card-header">
-            
+
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -51,7 +61,7 @@
 
                   <ng-container *ngIf="inventarios.length > 0">
                     <tbody *ngFor="let item of inventarios">
-                      <tr>  
+                      <tr>
                         <td>
                           {{item.admin.nombres}} {{item.admin.apellidos}}
                         </td>
@@ -81,7 +91,7 @@
               [collectionSize]="productos.length"
             ></ngb-pagination>
         </div>-->
-  </div>  
+  </div>
 
   <div class="modal fade" id="newInventary" tabindex="-1" style="display: none;" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
@@ -118,8 +128,8 @@
                   </div>
                 </div>
               </div>
-              
-              
+
+
             </div>
           </div>
           <div class="modal-footer">
